Fix Up bottom to always visible

--- a/css-positioning_layout-with-position/css/styles.css
+++ b/css-positioning_layout-with-position/css/styles.css
@@ -98,4 +98,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  bottom: 60px;
+  left: 10px;
 }
